--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
 		"gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
 	},
 	"author": "Walker Marlatt",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"css-loader": "^6.8.1",
+		"css-minimizer-webpack-plugin": "^5.0.1",
+		"html-webpack-plugin": "^5.5.3",
+		"mini-css-extract-plugin": "^2.7.6",
+		"style-loader": "^3.3.3",
+		"webpack": "^5.88.2",
+		"webpack-cli": "^5.1.4"
+	}
 }
