--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack",
 		"watch": "webpack --watch",
-		"rincewind-devDeps": "npm install css-loader css-minimizer-webpack-plugin html-webpack-plugin mini-css-extract-plugin style-loader webpack webpack-cli --save-dev",
+		"rincewind-dev": "npm install css-loader css-minimizer-webpack-plugin html-webpack-plugin mini-css-extract-plugin style-loader webpack webpack-cli --save-dev",
 		"gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
 		"gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
 	},
