--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
 	"description": "template JSON",
 	"private": true,
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"build": "webpack",
 		"watch": "webpack --watch",
-		"init-install": "npm install css-loader css-minimizer-webpack-plugin html-webpack-plugin mini-css-extract-plugin style-loader webpack webpack-cli eslint eslint-config-prettier --save-dev",
-		"init-lint": "./node_modules/.bin/eslint --init",
+		"init-all": "npm run init-webpack && npm run init-lint && npm run init-babel && npm run init-jest",
+		"init-babel": "npm install @babel/core @babel/preset-env --save-dev",
+		"init-jest": "npm install jest babel-jest --save-dev && echo '*.test.js' > .eslintignore && npm init jest@latest",
+		"init-lint": "npm install eslint eslint-config-prettier --save-dev && ./node_modules/.bin/eslint --init",
+		"init-webpack": "npm install webpack webpack-cli css-loader css-minimizer-webpack-plugin html-webpack-plugin mini-css-extract-plugin style-loader --save-dev",
 		"gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
 		"gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
 	},
